<resources>
    <string name="app_name">ActividadPrincipal</string>
    <string name="idNombre">Nombre</string>
    <string name="idApellido">Apellido</string>
    <string name="idEnviar">Enviar</string>
    <string name="idCall">Call</string>
    <string name="idSend">Send</string>
    <string name="idDial">Dial</string>
    <string name="idView">View</string>
    <string name="idMap">Mapa</string>
    <string name="idPick">Pick</string>
</resources>
