<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_act_dos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.actividadprincipal.ActDos">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:id="@+id/textView" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="30dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="40dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="39dp"
        android:id="@+id/textView4" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/idCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCall" />

            <Button
                android:text="@string/idSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSend" />

            <Button
                android:text="@string/idDial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDial" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/idView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnView" />

            <Button
                android:text="@string/idMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button6" />

            <Button
                android:text="@string/idPick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
